--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<section id="screen1">
-
+<section id="home">
 	<nav>
 		 <ul>
    <li><a href="#">Home</a></li>
@@ -25,12 +24,28 @@
 		 	  <li><a href="#">Contact</a></li>
 		 </ul>
 	</nav>
+  <div>
 
+  </div>
 </section>
 
-<section id="screen2"></section>
-<section id="screen3"></section>
-<section id="screen4"></section>
+<section id="about">
+  <div>
+
+  </div>
+</section>
+
+<section id="portfolio">
+  <div>
+
+  </div>
+</section>
+
+<section id="contact">
+  <div>
+
+  </div>
+</section>
 
 
 </html>
