--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 		 	  <li><a href="#">Contact</a></li>
 		 </ul>
 	</nav>
-<div class='row row-centered'>
+<div id="top-home" class='row row-centered'>
   <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
     <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' alt="Coming Soon Placeholder" id='profile-picture' class='img-circle' height="250vh" width="250vh" /></a>
   </div>
   <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
-    <h1 class='text-center'>Blake Harris</h1>
+    <h1 id="main-name" class='text-center'>Blake Harris</h1>
   </div>
 <div class='row row-centered'>
   <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/eb48wk0wj/Octocat.png' border='0' alt="Octocat" width='120' height="120" />
+    <img src='http://s19.postimg.org/eb48wk0wj/Octocat.png' border='0' alt=" Github" width='80' height="80" />
   </div>
   <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/5u4qlmw7n/fcc_robot.png' border='0' alt="fcc robot" width='120' heigh='120' />
+    <img src='http://s19.postimg.org/5u4qlmw7n/fcc_robot.png' border='0' alt="FreeCodeCamp" width='80' heigh='80' />
   </div>
   <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/rul329evn/codepen_1.png' border='0' alt="codepen" width="120" height="120"/>
+    <img src='http://s19.postimg.org/rul329evn/codepen_1.png' border='0' alt="Codepen" width="80" height="80"/>
   </div>
   <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/p1rvi8ej7/orange_in.png' border='0' alt="orange in" height="120" width="120" />
+    <img src='http://s19.postimg.org/p1rvi8ej7/orange_in.png' border='0' alt="LinkedIn" height="80" width="80" />
   </div>
 </div>
 </div>
