--- a/index.html
+++ b/index.html
@@ -16,54 +16,95 @@
 </head>
 
 <section id="home">
-	<nav>
-		 <ul>
-   <li><a href="#">Home</a></li>
-		 	  <li><a href="#">About</a></li>
-		 	  <li><a href="#">Portfolio</a></li>
-		 	  <li><a href="#">Contact</a></li>
-		 </ul>
-	</nav>
-<div id="top-home" class='row row-centered'>
-  <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
-    <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' alt="Coming Soon Placeholder" id='profile-picture' class='img-circle' height="250vh" width="250vh" /></a>
-  </div>
-  <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
-    <h1 id="main-name" class='text-center'>Blake Harris</h1>
-  </div>
-<div class='row row-centered'>
-  <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/eb48wk0wj/Octocat.png' border='0' alt=" Github" width='80' height="80" />
-  </div>
-  <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/5u4qlmw7n/fcc_robot.png' border='0' alt="FreeCodeCamp" width='80' heigh='80' />
-  </div>
-  <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/rul329evn/codepen_1.png' border='0' alt="Codepen" width="80" height="80"/>
-  </div>
-  <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
-    <img src='http://s19.postimg.org/p1rvi8ej7/orange_in.png' border='0' alt="LinkedIn" height="80" width="80" />
-  </div>
-</div>
-</div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <div id="top-home" class='row row-centered'>
+        <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
+            <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' alt="Coming Soon Placeholder" id='profile-picture' class='img-circle' height="250vh" width="250vh" /></a>
+        </div>
+        <div class='col-lg-12 col-md-12 col-xs-12 col-centered'>
+            <h1 id="main-name" class='text-center'>Blake Harris</h1>
+        </div>
+        <div class='row row-centered'>
+            <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/eb48wk0wj/Octocat.png' border='0' alt=" Github" width='80' height="80" />
+            </div>
+            <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/5u4qlmw7n/fcc_robot.png' border='0' alt="FreeCodeCamp" width='80' heigh='80' />
+            </div>
+            <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/rul329evn/codepen_1.png' border='0' alt="Codepen" width="80" height="80" />
+            </div>
+            <div id='social-icon' class='col-lg-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/p1rvi8ej7/orange_in.png' border='0' alt="LinkedIn" height="80" width="80" />
+            </div>
+        </div>
+    </div>
 </section>
 
 <section id="about">
-  <div>
-
-  </div>
+    <div class='row'>
+        <div class="col-lg-12 col-md-12 col-xs-12 col-centered">
+            <h1 id="header-text">About Section</h1>
+        </div>
+    </div>
 </section>
 
 <section id="portfolio">
-  <div>
-
-  </div>
+    <div class='row'>
+        <div class="col-lg-12 col-md-12 col-xs-12 col-centered">
+            <h1 id='header-text'>Portfolio</h1>
+        </div>
+        <div class='row row-centered'>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Tribute</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Local Weather</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Wikipedia Viewer</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Twitch Viewer</h3>
+            </div>
+        </div>
+        <div class='row row-centered'>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>React Weather</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>React Timer</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Coming Soon...</h3>
+            </div>
+            <div class='col-xl-3 col-md-3 col-xs-3 col-centered'>
+                <img src='http://s19.postimg.org/9ny6usdjn/Coming_Soon_Placeholder.jpg' border='0' id='project' alt="Tribute Page" width='200' height="200" />
+                <h3>Coming Soon...</h3>
+            </div>
+        </div>
 </section>
 
 <section id="contact">
-  <div>
-
-  </div>
+    <div class='row'>
+        <div class="col-lg-12 col-md-12 col-xs-12 col-centered">
+            <h1 id='header-text'>Contact me Section</h1>
+        </div>
+    </div>
 </section>
 
 
